--- a/Src/Clide.props
+++ b/Src/Clide.props
@@ -1,45 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-	<PropertyGroup>
-		<SolutionDir>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), Clide.sln))</SolutionDir>
-		<SolutionDir Condition="!HasTrailingSlash('$(SolutionDir)')">$(SolutionDir)\</SolutionDir>
+  <PropertyGroup>
+    <SolutionDir>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), Clide.sln))</SolutionDir>
+    <SolutionDir Condition="!HasTrailingSlash('$(SolutionDir)')">$(SolutionDir)\</SolutionDir>
 
-		<PackageVersion Condition="'$(PackageVersion)' == ''">1.0.0</PackageVersion>
-		<Configuration Condition="'$(Configuration)' == ''">Release</Configuration>
-		<BuildRoot>$(SolutionDir)</BuildRoot>
-		<DropDirectory>$(BuildRoot)Drops\</DropDirectory>
-		<NuGetExe>$(BuildRoot).nuget\NuGet.exe</NuGetExe>
-		<NugetTarget>net45</NugetTarget>
-		<RestorePackages>true</RestorePackages>
-		<RequireRestoreConsent>false</RequireRestoreConsent>
-		<DownloadNuGetExe>true</DownloadNuGetExe>
+    <Configuration Condition="'$(Configuration)' == ''">Release</Configuration>
+    <OutputPath>bin\$(Configuration)\</OutputPath>
 
-		<OutputPath>bin\$(Configuration)\</OutputPath>
-		<DebugSymbols>true</DebugSymbols>
-		<DebugType>full</DebugType>
-		<Optimize>false</Optimize>
-		<ErrorReport>prompt</ErrorReport>
-		<WarningLevel>4</WarningLevel>
-	</PropertyGroup>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
 
-	<PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-		<DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
-	</PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)ClariusLabs.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
 
-	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-		<DefineConstants>$(DefineConstants);TRACE</DefineConstants>
-	</PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<!-- If we don't make these invisible, they show up in VS as missing files :S -->
-		<AvailableItemName Include="NuSpec">
-			<Visible>False</Visible>
-		</AvailableItemName>
-
-		<AvailableItemName Include="AssemblyReport">
-			<Visible>False</Visible>
-		</AvailableItemName>
-    </ItemGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DefineConstants>$(DefineConstants);TRACE</DefineConstants>
+  </PropertyGroup>
 </Project>
