--- a/Src/Clide.nuspec
+++ b/Src/Clide.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>Clide</id>
-        <version>1.1</version>
+        <version>$version$</version>
         <title>Clide: An Enjoyable IDE Automation API</title>
         <authors>Daniel Cazzulino</authors>
         <owners>Daniel Cazzulino</owners>
@@ -79,4 +79,9 @@ v1.0
         <copyright>Copyright 2012</copyright>
         <tags>visualstudio vsx extensibility</tags>
     </metadata>
+    <files>
+      <file src="Clide\bin\$configuration$\Clide.dll" target="lib\net45" />
+      <file src="Clide\bin\$configuration$\Clide.pdb" target="lib\net45" />
+      <file src="Clide\bin\$configuration$\Clide.xml" target="lib\net45" />
+    </files>
 </package>
