--- a/Src/Clide/packages.config
+++ b/Src/Clide/packages.config
@@ -8,6 +8,7 @@
   <package id="CommonComposition.Mef.Source" version="0.2.3" targetFramework="net4" developmentDependency="true" />
   <package id="CommonComposition.Source" version="0.2.3" targetFramework="net4" developmentDependency="true" />
   <package id="CommonServiceLocator.Source" version="1.0.2" targetFramework="net4" developmentDependency="true" />
+  <package id="GitInfo" version="1.0.54-pre" targetFramework="net45" />
   <package id="netfx-Guard" version="1.3.3.2" targetFramework="net4" developmentDependency="true" />
   <package id="netfx-Reflector" version="1.0.0.10" targetFramework="net4" developmentDependency="true" />
   <package id="netfx-System.AmbientSingleton" version="1.2.1.0" targetFramework="net4" developmentDependency="true" />
