--- a/Src/Clide.nuspec
+++ b/Src/Clide.nuspec
@@ -1,19 +1,17 @@
 <?xml version="1.0"?>
 <package>
-    <metadata>
-        <id>Clide</id>
-        <version>$version$</version>
-        <title>Clide: An Enjoyable IDE Automation API</title>
-        <authors>Daniel Cazzulino</authors>
-        <owners>Daniel Cazzulino</owners>
-
-        <licenseUrl>https://github.com/clariuslabs/clide/License.txt</licenseUrl>
-        <projectUrl>https://github.com/clariuslabs/clide/</projectUrl>
-        <iconUrl>https://raw.github.com/clariuslabs/clide/master/img/Clide32x32.png</iconUrl>
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>High-level, composable and testable APIs for working with IDEs.
-</description>
-        <releaseNotes>v2.2
+  <metadata>
+    <id>Clide</id>
+    <version>$version$</version>
+    <title>Clide: An Enjoyable IDE Automation API</title>
+    <authors>Daniel Cazzulino</authors>
+    <owners>Daniel Cazzulino</owners>
+    <licenseUrl>https://github.com/clariuslabs/clide/License.txt</licenseUrl>
+    <projectUrl>https://github.com/clariuslabs/clide/</projectUrl>
+    <iconUrl>https://raw.github.com/clariuslabs/clide/master/img/Clide32x32.png</iconUrl>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>High-level, composable and testable APIs for working with IDEs.</description>
+    <releaseNotes>v2.2
 
 * Added general-purpose referencing service
 
@@ -75,14 +73,13 @@ v1.0
 
 * Full support for MEF-exported commands (ICommandExtension) and command filters
 * ToolWindow support
-* Tools options pages support
-</releaseNotes>
-        <copyright>Copyright 2012</copyright>
-        <tags>visualstudio vsx extensibility</tags>
-    </metadata>
-    <files>
-      <file src="Clide\bin\$configuration$\Clide.dll" target="lib\net45" />
-      <file src="Clide\bin\$configuration$\Clide.pdb" target="lib\net45" />
-      <file src="Clide\bin\$configuration$\Clide.xml" target="lib\net45" />
-    </files>
+* Tools options pages support</releaseNotes>
+    <copyright>Copyright 2012</copyright>
+    <tags>visualstudio vsx extensibility</tags>
+  </metadata>
+  <files>
+    <file src="Clide\bin\$configuration$\Clide.dll" target="lib\net45" />
+    <file src="Clide\bin\$configuration$\Clide.pdb" target="lib\net45" />
+    <file src="Clide\bin\$configuration$\Clide.xml" target="lib\net45" />
+  </files>
 </package>
