Include full buildable sources in the main package
This allows the packaged version to be used for debugging as well
as in-place fixing if necessary while a proper PR is merged.
GitInfo.txt for the built version is included too, so that the built
assembly has the exact same version and token as the one shipped
with the package.

--- a/Src/Clide.nuspec
+++ b/Src/Clide.nuspec
@@ -81,5 +81,20 @@ v1.0
     <file src="Clide\bin\$configuration$\Clide.dll" target="lib\net45" />
     <file src="Clide\bin\$configuration$\Clide.pdb" target="lib\net45" />
     <file src="Clide\bin\$configuration$\Clide.xml" target="lib\net45" />
+    <file src="Clide\bin\$configuration$\GitInfo.txt" target="src\" />
+    <file src="Clide.Standalone.sln" target="src\Clide.sln" />
+    <file src="Clide.props" target="src\" />
+    <file src="Clide.targets" target="src\" />
+    <file src="Before.Clide.Standalone.sln.targets" target="src\Before.Clide.sln.targets" />
+    <file src="NuGet.Restore.targets" target="src\" />
+    <file src="ClariusLabs.snk" target="src\" />
+    <file src="GlobalAssemblyInfo.cs" target="src\" />
+    <file src="GlobalAssemblyInfo.cs" target="src\" />
+    <file src="Clide\Clide.csproj" target="src\Clide\" />
+    <file src="Clide\**\*.cs" target="src\Clide\" exclude="**\bin\**\*.*;**\obj\**\*.*" />
+    <file src="Clide\**\*.xaml" target="src\Clide\" exclude="**\bin\**\*.*;**\obj\**\*.*" />
+    <file src="Clide\**\*.tt" target="src\Clide\" exclude="**\bin\**\*.*;**\obj\**\*.*" />
+    <file src="Clide\*.config" target="src\Clide\" />
+    <file src="Clide\**\*.resx" target="src\Clide\" />
   </files>
 </package>
