--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -13,6 +13,8 @@
     <AssemblyName>Clide</AssemblyName>
     <DocumentationFile>$(OutputPath)$(AssemblyName).xml</DocumentationFile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="envdte, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -169,6 +171,15 @@
     <Compile Include="External\Diagnostics\Tracer\Tracer.cs" />
     <Compile Include="External\Diagnostics\Tracer\Visibility.cs" />
     <Compile Include="IErrorItem.cs" />
+    <Compile Include="netfx\System\AmbientSingleton.cs" />
+    <Compile Include="netfx\System\Guard.cs" />
+    <Compile Include="netfx\System\TypeInheritance.cs" />
+    <Compile Include="netfx\System\TypeInheritanceExtension.cs" />
+    <Compile Include="Patterns\Adapter\Constants.cs" />
+    <Compile Include="Patterns\Adapter\IAdaptable.cs" />
+    <Compile Include="Patterns\Adapter\IAdapter.cs" />
+    <Compile Include="Patterns\Adapter\IAdapterService.cs" />
+    <Compile Include="Patterns\Adapter\IFluentInterface.cs" />
     <Compile Include="Patterns\Visibility.cs" />
     <Compile Include="Diagnostics\ITracerManager.cs" />
     <Compile Include="Diagnostics\Tracer.cs" />
@@ -189,10 +200,8 @@
     <Compile Include="IOptionsPageWindowFactory.cs" />
     <Compile Include="IOutputWindowManager.cs" />
     <Compile Include="IOutputWindowManagerExtensions.cs" />
-    <Compile Include="netfx\System\AmbientSingleton.cs" />
     <Compile Include="netfx\System\Collections\Generic\IEnumerable\TraverseKind.cs" />
     <Compile Include="netfx\System\Collections\Generic\IEnumerable\Traverser.cs" />
-    <Compile Include="netfx\System\Guard.cs" />
     <Compile Include="netfx\System\Reflection\Reflect.Overloads.cs" />
     <Compile Include="netfx\System\StringFormatWith.cs" />
     <Compile Include="netfx\System\Windows\Threading\DispatcherInvokeExtensions.cs" />
@@ -224,16 +233,6 @@
     <Compile Include="IOptionsPage.cs" />
     <Compile Include="Patterns\Adapter\AdapterService.cs" />
     <Compile Include="Patterns\Adapter\AdaptersInitializer.cs" />
-    <Compile Include="Patterns\Adapter\Constants.cs" />
-    <Compile Include="Patterns\Adapter\IAdaptable.cs" />
-    <Compile Include="Patterns\Adapter\IAdapter.cs" />
-    <Compile Include="Patterns\Adapter\IAdapterService.cs" />
-    <Compile Include="Patterns\Adapter\IFluentInterface.cs" />
-    <Compile Include="Properties\Resources.Strings.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.tt</DependentUpon>
-    </Compile>
     <Compile Include="ProvideComponentsAttribute.cs" />
     <Compile Include="References\IReferenceProvider.cs">
       <SubType>Code</SubType>
@@ -241,7 +240,7 @@
     <Compile Include="References\IReferenceProviderRegistry.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="References\IReferenceProvider`1.cs">
+    <Compile Include="References\IReferenceProvider.T.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="References\IReferenceService.cs">
@@ -269,9 +268,7 @@
     <Compile Include="Solution\Implementation\Adapters\MsBuildAdapter.cs" />
     <Compile Include="Solution\Implementation\Adapters\SolutionToDteAdapter.cs" />
     <Compile Include="OptionsManager.cs" />
-    <Compile Include="OptionsPage.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="OptionsPage.cs" />
     <Compile Include="OptionsPageAttribute.cs" />
     <Compile Include="OptionsPageWindowFactory.cs" />
     <Compile Include="Solution\Extensions\IProjectNodeExtensions.cs" />
@@ -300,8 +297,6 @@
     <Compile Include="Solution\IProjectConfiguration.cs" />
     <Compile Include="GlobalServiceProvider.cs" />
     <Compile Include="VisualStudio\VsHierarchyExtensions.cs" />
-    <Compile Include="netfx\System\TypeInheritance.cs" />
-    <Compile Include="netfx\System\TypeInheritanceExtension.cs" />
     <Compile Include="Solution\Implementation\AggregateHierarchyFactory.cs" />
     <Compile Include="Solution\Implementation\DefaultHierarchyFactory.cs" />
     <Compile Include="Solution\Implementation\FallbackFactoryAttribute.cs" />
@@ -396,13 +391,6 @@
     </AssemblyReport>
     <None Include="app.config" />
     <None Include="ClariusLabs.snk" />
-    <None Include="Properties\Resources.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Resources.Strings.cs</LastGenOutput>
-    </None>
-    <NuSpec Include="Clide.nuspec">
-      <SubType>Designer</SubType>
-    </NuSpec>
     <None Include="ilmerge.exclude" />
     <None Include="netfx\System\Reflection\Reflect.Overloads.tt" />
     <None Include="netfx\System\Reflection\TargetFramework.ttinclude" />
@@ -444,11 +432,11 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\netfx-System.StringResources.2.0.0\build\netfx-System.StringResources.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\netfx-System.StringResources.2.0.0\build\netfx-System.StringResources.targets'))" />
     <Error Condition="!Exists('..\packages\Clarius.TransformOnBuild.1.1.12\build\Clarius.TransformOnBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Clarius.TransformOnBuild.1.1.12\build\Clarius.TransformOnBuild.targets'))" />
     <Error Condition="!Exists('..\packages\GitInfo.1.0.54-pre\build\GitInfo.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\GitInfo.1.0.54-pre\build\GitInfo.targets'))" />
+    <Error Condition="!Exists('..\packages\netfx-System.StringResources.3.0.4\build\netfx-System.StringResources.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\netfx-System.StringResources.3.0.4\build\netfx-System.StringResources.targets'))" />
   </Target>
-  <Import Project="..\packages\netfx-System.StringResources.2.0.0\build\netfx-System.StringResources.targets" Condition="Exists('..\packages\netfx-System.StringResources.2.0.0\build\netfx-System.StringResources.targets')" />
   <Import Project="..\packages\Clarius.TransformOnBuild.1.1.12\build\Clarius.TransformOnBuild.targets" Condition="Exists('..\packages\Clarius.TransformOnBuild.1.1.12\build\Clarius.TransformOnBuild.targets')" />
   <Import Project="..\packages\GitInfo.1.0.54-pre\build\GitInfo.targets" Condition="Exists('..\packages\GitInfo.1.0.54-pre\build\GitInfo.targets')" />
+  <Import Project="..\packages\netfx-System.StringResources.3.0.4\build\netfx-System.StringResources.targets" Condition="Exists('..\packages\netfx-System.StringResources.3.0.4\build\netfx-System.StringResources.targets')" />
 </Project>
