Deploy on master or v2 branch

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ deploy:
       secure: 7MS5+XWaFchMXFqzgneQCqo9U0DlxiPXe/KWWUnbCBDEizVn06EjdQZkWu1gbNOJ
     artifact: Package
     on:
-      branch: master
+      branch: /master|v2/
       
 nuget:
   project_feed: true
