Improved integration tests running locally
- Allows running as the CI server would (all VS versions, MSI installed, regular hive)
- Allows running with the MSI, but for current VS version
- Allows running without the MSI, for current VS version (quick verify)
- Make traversal navigation for tests more reliable by waiting and retrying when failed

--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,6 @@ indent_size = 4
 indent_style = tab
 indent_size = 4
 
-[*.{csproj,wixproj,resx}]
+[*.{csproj,wixproj,resx,user}]
 indent_style = space
 indent_size = 2
