--- a/src/Clide.IntegrationTests/Clide.IntegrationTests.targets
+++ b/src/Clide.IntegrationTests/Clide.IntegrationTests.targets
@@ -2,8 +2,7 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
 	<PropertyGroup>
-		<GenerateAssemblyVsixAttribute>false</GenerateAssemblyVsixAttribute>
-		<DefineConstants Condition=" '$(CI)' == 'true' ">$(DefineConstants);CI</DefineConstants>
+		<MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
