Let AppVeyor run the tests itself
This means that locally, we'll need to run Test or
UnitTest/IntegrationTest targets explicitly in order
to get the tests to run, but this integrates better
with AppVeyor real-time reporting on the tests progress.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,9 @@ init:
 build_script:
   - build.cmd
 
-# we run the tests ourselves in build.cmd
-test: off
+test:
+  assemblies:
+    - '**\*Tests.dll'
 
 deploy:
   - provider: NuGet
