Don't run tests against VS2012 in AppVeyor
Since the VSSDK isn't installed there.

--- a/src/Clide.IntegrationTests/Clide.IntegrationTests.targets
+++ b/src/Clide.IntegrationTests/Clide.IntegrationTests.targets
@@ -2,7 +2,7 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
 	<PropertyGroup>
-		<MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
+		<MinimumVisualStudioVersion Condition=" '$(MinimumVisualStudioVersion)' == '' ">11.0</MinimumVisualStudioVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
