Report integration test status to AppVeyor

--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
 	<package id="GitInfo" version="1.0.56-pre" targetFramework="net45" />
 	<package id="xunit.runner.msbuild" version="2.1.0" targetFramework="net45" />
 	<package id="xunit.runner.console" version="2.1.0" targetFramework="net45" />
+	<package id="MSBuilder.CodeTaskAssembly" version="0.2.2" targetFramework="net45" />
 </packages>
