--- a/src/Clide.UnitTests/packages.config
+++ b/src/Clide.UnitTests/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GitInfo" version="1.0.56-pre" targetFramework="net45" />
+  <package id="Merq" version="0.3.7-pre" targetFramework="net45" />
+  <package id="Merq.Commands" version="0.3.7-pre" targetFramework="net45" />
+  <package id="Merq.Events" version="0.3.7-pre" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Threading" version="12.2" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Validation" version="12.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
