API cleanup and polishing for C# 6

--- a/src/Clide.Interfaces/Clide.Interfaces.csproj
+++ b/src/Clide.Interfaces/Clide.Interfaces.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\MissingDependencyException.cs" />
+    <Compile Include="Extensions\ServiceLocatorFacades.cs" />
     <Compile Include="IFluentInterface.cs" />
     <Compile Include="Solution\ISolutionExplorerNodeExtensions.cs" />
     <Compile Include="Solution\ISolutionNodeExtensions.cs" />
