Added tests for solution to hierarchy adapter

--- a/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
+++ b/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
@@ -246,6 +246,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapters\DteToVsAdapterSpec.cs" />
+    <Compile Include="Adapters\SolutionToHierarchySpec.cs" />
     <Compile Include="AsyncManagerSpec.cs" />
     <Compile Include="GlobalServiceLocator.cs" />
     <Compile Include="Constants.cs" />
