--- a/src/Clide.Interfaces/packages.config
+++ b/src/Clide.Interfaces/packages.config
@@ -26,4 +26,9 @@
   <package id="VSSDK.Shell.Interop.9" version="9.0.4" targetFramework="net45" />
   <package id="VSSDK.TextManager.Interop" version="7.0.4" targetFramework="net45" />
   <package id="VSSDK.TextManager.Interop.8" version="8.0.4" targetFramework="net45" />
+  <package id="VSSDK.VSLangProj" version="7.0.4" targetFramework="net45" />
+  <package id="VSSDK.VSLangProj.10" version="10.0.4" targetFramework="net45" />
+  <package id="VSSDK.VSLangProj.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.VSLangProj.8" version="8.0.4" targetFramework="net45" />
+  <package id="VSSDK.VSLangProj.9" version="9.0.4" targetFramework="net45" />
 </packages>
